# avidtools

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  __init__.py  mileva_cves.jsonl  mypy.ini  pyproject.toml  setup.py  test_report.json  test_version_logic.sh
.github/workflows/: publish.yml  test.yml  update-version.yml
avidtools/connectors/: .garak_probe_summary_cache.json  __init__.py  aiid.py  atlas.py  base.py  cve.py  garak.py  inspect.py  url.py  utils.py
avidtools/datamodels/: components.py  enums.py  objects.py  report.py  vulnerability.py
avidtools/notebooks/: API_Tutorial.ipynb
docker/: docker-compose.yml  loader.py  requirments.txt
docs/: README.md  URL_CONNECTOR.md
docs/source/: components.rst  conf.py  index.rst  modules.rst  report.rst
docs/source/reference/: components.rst  connectors.rst  enums.rst  report.rst  vulnerability.rst
docs/source/usage/: components.rst  enums.rst  models.rst
notebooks/: API_Tutorial.ipynb
scripts/: demo_url_connector.py  download_pages.py  example_url_usage.py  mileva.py  mileva_cves.jsonl  mindgard.py  odin.py  openclaw.py  test_failed.py  test_single_disclosure.py  test_url_connector.py
scripts/scraped_html/: 02997b6f-004e-4e7b-a9e3-8368679bae8d.html  05903fa9-0d75-47df-b08a-fcd1367a9b5e.html  06b58763-8a7b-4d82-afb6-ebe738b378a4.html  0c734bf2-2966-48f5-9338-15b37999aa31.html  0d1e2015-f6ce-4b79-8bde-edd26bfc6f02.html  0d97ce9d-29aa-45a0-8b5c-f71daee04ea5.html  1a2aa0fd-0b2b-42fb-b392-5ccdd7ac1f7d.html  2206bdf0-3516-4649-b489-6c19d277ffd5.html  2235061a-e292-474f-ac38-a510b80b5ef0.html  24b04730-9634-4d76-996d-185e0c4f64ef.html  24b273ea-47d2-4614-9d14-a26937378b5f.html  259d4db0-9b36-492b-8141-e19a7b82d7de.html  2d78a1b1-23af-4f8a-a133-95082633a795.html  3017fc21-93a8-41d7-ad92-3b3ccb1b2b58.html  3e517ab6-1be5-4d29-85b5-10e0f182dbf2.html  3e561335-ec5d-42f7-9aa1-9d598c3f7508.html  3ed2a42e-5365-4e8d-a489-5ce5c3b61d01.html  42b3d2ae-84d3-47a2-a35c-49a7ace22b99.html  439777fa-377a-43cb-83c6-c1a012e384b1.html  46732bee-b89d-4107-bf15-a2126a51341f.html  4bc32c71-7b37-45d2-b68f-a320c7b8bf6d.html  4d590568-3622-41ae-b91a-eae8b5a4382e.html  4e8ed295-a772-4a29-8727-cbefada44123.html  4f01819a-3dfe-4d99-9243-5870085372ed.html  54948386-4983-4e19-841c-b00a935b56ce.html  55029360-7b19-4c84-8795-fa89622e4006.html  5885c5aa-6ed6-4203-a3a2-bddb8dfb8ed7.html  5a5f494f-93a7-4c47-bba0-521c58eafaa6.html  64104fd3-265d-4784-81f0-7375b243195c.html  674b2709-de61-4d81-9e10-def762536d88.html  70a92009-8de4-485d-ae99-2015e3d3daa0.html  73febbd3-7f08-4d83-8111-b94cc16dfc5a.html  78819949-0069-4cdb-817e-70957ffd2293.html  7925c205-4006-402c-a5c3-70dea0a98eda.html  83e6d7bd-20b2-4a5e-81eb-3b987e01bc79.html  87043a8a-022b-4fe3-8cc5-2bff6a3cd130.html  8a0eace8-6724-4ec4-8af9-3cee8e8a97c9.html  8c08e9ed-f244-4cdf-9860-c9307fe8669d.html  8c6847ec-598f-4ba7-8d6f-2878f8c7aa41.html  8ccd7f81-4e36-4084-8061-cec6e2d83ece.html  (+26 more)
tests/: README.md  conftest.py
tests/integration/: test_atlas_integration.py
tests/unit/connectors/: __init__.py  test_atlas.py  test_cve.py  test_enrich_utils.py  test_garak.py  test_inspect.py  test_normalize_utils.py
tests/unit/datamodels/: __init__.py  test_components.py  test_enums.py
vaildate/: runvalidators.py
