[project]
name = "avidtools"
version = "0.2.1"
description = "Developer tools for AVID"
authors = [
    {name = "Subho Majumdar", email = "subho@avidml.org"},
    {name = "Harsh Raj", email = "harsh@avidml.org"},
    {name = "Carol Anderson", email = "carol@avidml.org"},
    {name = "Nathan Butters", email = "nathan@avidml.org"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["ai", "vulnerability", "security", "machine-learning", "avid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/avidml/avidtools"
Repository = "https://github.com/avidml/avidtools"
Documentation = "https://github.com/avidml/avidtools"
"Bug Tracker" = "https://github.com/avidml/avidtools/issues"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.5"
typing-extensions = "^4.13.2"
nvdlib = "^0.8.1"
openai = "^1.0.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
lxml = "^5.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
ruff = "^0.11.12"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
responses = "^0.24.0"
types-requests = "^2.32.4.20250611"
types-pyyaml = "^6.0.12.20250516"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=avidtools",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["avidtools"]
omit = [
    "tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

